--- a/BankApp/userwindow.ui
+++ b/BankApp/userwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>UserWindow</class>
- <widget class="QMainWindow" name="UserWindow">
+ <widget class="QDialog" name="UserWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -13,7 +13,15 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="centralwidget" native="true">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>601</width>
+     <height>440</height>
+    </rect>
+   </property>
    <widget class="QPushButton" name="CreditButton">
     <property name="geometry">
      <rect>
@@ -69,10 +77,10 @@
      <widget class="QLabel" name="BalanceLabel">
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>230</x>
         <y>70</y>
         <width>161</width>
-        <height>111</height>
+        <height>31</height>
        </rect>
       </property>
       <property name="text">
@@ -90,6 +98,19 @@
       </property>
       <property name="text">
        <string>Welcome</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>80</y>
+        <width>52</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>BALANCE</string>
       </property>
      </widget>
     </widget>
@@ -111,9 +132,9 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>50</y>
+        <y>40</y>
         <width>421</width>
-        <height>31</height>
+        <height>110</height>
        </rect>
       </property>
      </widget>
@@ -121,7 +142,7 @@
       <property name="geometry">
        <rect>
         <x>40</x>
-        <y>90</y>
+        <y>160</y>
         <width>80</width>
         <height>24</height>
        </rect>
@@ -134,7 +155,7 @@
       <property name="geometry">
        <rect>
         <x>160</x>
-        <y>90</y>
+        <y>160</y>
         <width>80</width>
         <height>24</height>
        </rect>
@@ -147,7 +168,7 @@
       <property name="geometry">
        <rect>
         <x>80</x>
-        <y>160</y>
+        <y>210</y>
         <width>160</width>
         <height>16</height>
        </rect>
@@ -160,7 +181,7 @@
       <property name="geometry">
        <rect>
         <x>80</x>
-        <y>190</y>
+        <y>230</y>
         <width>160</width>
         <height>16</height>
        </rect>
@@ -169,11 +190,11 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
-     <widget class="QSlider" name="mountSlider">
+     <widget class="QSlider" name="AmountSlider">
       <property name="geometry">
        <rect>
         <x>80</x>
-        <y>220</y>
+        <y>250</y>
         <width>160</width>
         <height>16</height>
        </rect>
@@ -186,7 +207,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>160</y>
+        <y>210</y>
         <width>49</width>
         <height>16</height>
        </rect>
@@ -199,7 +220,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>190</y>
+        <y>230</y>
         <width>49</width>
         <height>16</height>
        </rect>
@@ -212,7 +233,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>220</y>
+        <y>250</y>
         <width>49</width>
         <height>16</height>
        </rect>
@@ -225,7 +246,7 @@
       <property name="geometry">
        <rect>
         <x>250</x>
-        <y>160</y>
+        <y>210</y>
         <width>49</width>
         <height>16</height>
        </rect>
@@ -238,7 +259,7 @@
       <property name="geometry">
        <rect>
         <x>250</x>
-        <y>190</y>
+        <y>230</y>
         <width>49</width>
         <height>16</height>
        </rect>
@@ -251,7 +272,7 @@
       <property name="geometry">
        <rect>
         <x>250</x>
-        <y>220</y>
+        <y>250</y>
         <width>49</width>
         <height>16</height>
        </rect>
@@ -260,11 +281,11 @@
        <string>Amount</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="TakeCreditButton">
       <property name="geometry">
        <rect>
         <x>370</x>
-        <y>170</y>
+        <y>210</y>
         <width>80</width>
         <height>24</height>
        </rect>
@@ -277,7 +298,20 @@
       <property name="geometry">
        <rect>
         <x>380</x>
-        <y>210</y>
+        <y>250</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Error</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ErrorPayLabel">
+      <property name="geometry">
+       <rect>
+        <x>290</x>
+        <y>160</y>
         <width>49</width>
         <height>16</height>
        </rect>
@@ -287,20 +321,187 @@
       </property>
      </widget>
     </widget>
-    <widget class="QWidget" name="page_3"/>
-   </widget>
-   <widget class="QPushButton" name="ExitButton">
-    <property name="geometry">
-     <rect>
-      <x>510</x>
-      <y>10</y>
-      <width>80</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>exit</string>
-    </property>
+    <widget class="QWidget" name="page_3">
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>20</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Deposit</string>
+      </property>
+     </widget>
+     <widget class="QTableView" name="DepositView">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>50</y>
+        <width>421</width>
+        <height>100</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="CloseDepositButton">
+      <property name="geometry">
+       <rect>
+        <x>80</x>
+        <y>160</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Close Deposit</string>
+      </property>
+     </widget>
+     <widget class="QSlider" name="TimeSlider_2">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>200</y>
+        <width>160</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QSlider" name="RateSlider_2">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>220</y>
+        <width>160</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QSlider" name="AmountSlider_2">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>240</y>
+        <width>160</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>200</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Time</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_7">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>220</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Rate</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_8">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>240</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Amount</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="TimeLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>200</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Time</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="RateLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>220</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Rate</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="AmountLabel_2">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>240</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Amount</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="TakeDepositButton">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>200</y>
+        <width>80</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Take Credit</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="ErrorDepositLabel">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>240</y>
+        <width>49</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Error</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
  </widget>
