--- a/BankApp/administratorwindow.ui
+++ b/BankApp/administratorwindow.ui
@@ -13,54 +13,77 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:  #4ea5ff;</string>
+  </property>
   <widget class="QTableView" name="UserTableView">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>50</y>
-     <width>751</width>
+     <x>20</x>
+     <y>60</y>
+     <width>741</width>
      <height>192</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: black;
+background-color: white</string>
    </property>
   </widget>
   <widget class="QTableView" name="CreditTableView">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>270</y>
-     <width>541</width>
+     <x>20</x>
+     <y>320</y>
+     <width>551</width>
      <height>192</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: black;
+background-color: white;</string>
    </property>
   </widget>
   <widget class="QTableView" name="DepositTableView">
    <property name="geometry">
     <rect>
      <x>590</x>
-     <y>270</y>
+     <y>320</y>
      <width>601</width>
      <height>192</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: black;
+background-color: white;</string>
    </property>
   </widget>
   <widget class="QTableView" name="BankTableView">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>490</y>
-     <width>421</width>
-     <height>111</height>
+     <x>780</x>
+     <y>60</y>
+     <width>411</width>
+     <height>191</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: black;
+background-color: white;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="UpdateButton">
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>440</x>
      <y>620</y>
-     <width>80</width>
+     <width>291</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: black;
+background-color:  white;</string>
    </property>
    <property name="text">
     <string>Update</string>
